--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
     }
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "-": "0.0.1",
+    "electron-prebuilt": "^1.4.13",
+    "electron-squirrel-startup": "^1.0.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.50",
@@ -53,6 +56,6 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.50",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.50",
     "@electron-forge/maker-zip": "^6.0.0-beta.50",
-    "electron": "8.2.3"
+    "electron": "^8.2.3"
   }
 }
